testsuite/tests/driver/T26423/T26423.stderr
Hello.hs:3:1: error: [GHC-87110]
    Could not find module ‘Test’.
    Use -v to see a list of the files searched for.
  |
3 | import Test
  | ^^^^^^^^^^^

